--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~45.0.0",
     "expo-application": "^4.1.0",
     "expo-auth-session": "~3.6.1",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-font": "~10.1.0",
     "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
@@ -24,8 +25,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-dotenv": "^3.3.1",
     "react-native-qrcode": "^0.2.7",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
