--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-application": "^4.1.0",
     "expo-auth-session": "~3.6.1",
     "expo-barcode-scanner": "~11.3.0",
+    "expo-checkbox": "~2.1.0",
     "expo-font": "~10.1.0",
     "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
